# handecoder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt
cmake/: rockchip_mpp-build.pc.in  twig-build.pc.in
include/: hdcd.h
scripts/: gen-toolchain.sh  patch-ffmpeg.sh  unpatch-ffmpeg.sh
src/: ffmpeg-load.c  hdcd-buffer.c  hdcd-export.c  hdcd-hook.c  hdcd-hooks.c  hdcd-init.c  hdcd.c
src/include/: hdcd-common.h
src/include/allwinner/: ion.h
